# cugridder

./: CMakeLists.txt  Makefile  README.md  setup.py
contrib/: common.cpp  utils_fp.h
cuda_gridder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
include/: conv.h  conv_interp_invoker.h  cudagridder.h  cuft.h  cugridder.h  curafft_opts.h  curafft_plan.h  datatype.h  deconv.h  interp.h  precomp.h  utils.h
python/curagridder/: curagridder.py  cursl.py  explicit_test.py  test_ws.py  test_wst.py
src/: cudagridder.cc  utils.cu
src/astro/: cugridder.cu  precomp.cu  ra_exec.cu  ra_exec.h
src/fourier/: conv.cu  conv_interp_invoker.cu  cuft.cu  deconv.cu  interp.cu
test/: adjointness_1d_test.cu  conv_2d_test.cu  conv_3d_test.cu  explicit_gridder_test.cu  nufft_1d_3_1_test.cu  nufft_1d_3_2_test.cu  nufft_1d_test.cu  nufft_2d_1_test.cu  nufft_2d_2_test.cu  utils_test.cu  w_s_degridder_test.cu  w_s_gridder_test.cu
